--- a/src/components/TaskItem.module.css
+++ b/src/components/TaskItem.module.css
@@ -9,13 +9,13 @@
 }
 
 .item h1 {
-  font-size: 1.2rem;
+  font-size: 2.5vh;
   margin: 0;
 }
 
 .item p {
   color: black;
-  font-size: 0.8rem;
+  font-size: 1.5vh;
   margin: 0;
   font-style: italic;
 }
@@ -39,13 +39,17 @@
 
 .right button {
   background-color: #fff;
-  padding: 4px 6px;
+  padding: 0.7vh 1vh;
   border: none;
   cursor: pointer;
-  margin-left: 8px;
-  border-radius: 6px;
+  border-radius: 1vh;
+  font-size: 1.6vh;
 }
 
 .right button:hover {
   border: 1px solid rgb(74, 62, 62);
+}
+
+.right button:last-child {
+  margin-left: 0.6vw;
 }
