--- a/src/components/EditItemModal.module.css
+++ b/src/components/EditItemModal.module.css
@@ -27,36 +27,42 @@
   background-color: #fff;
   border-radius: 14px;
   font-weight: bold;
-  font-size: 1.2rem;
 }
 
-.cart * {
-  margin: 0 1vw 0 1vw;
+.cart label {
+  font-size: 2.5vh;
+  margin-left: 5%;
 }
 
 .cart p {
-  font-size: 0.8rem;
-  margin: 0 auto;
+  font-size: 1.6vh;
+  margin: 0 5%;
+  text-align: center;
   color: rgb(127, 39, 140);
 }
 
 .cart input {
-  height: 3.5vh;
-  padding-left: 0.5vw;
+  box-sizing: border-box;
+  height: 3vh;
+  width: 90%;
+  align-self: center;
+  padding: 0 0.5vw;
   border: 1px solid rgb(74, 62, 62);
+  font-size: 2vh;
 }
 
 .cart button {
   align-self: center;
-  width: 20%;
+  width: 12vw;
   height: 5vh;
   margin: 1vh 1vw;
+  padding: 0 0.6vw;
   border: none;
   background-color: rgb(127, 39, 140);
   color: white;
-  border-radius: 14px;
+  border-radius: 1vh;
   font-weight: bold;
-  font-size: 0.8rem;
+  font-size: 1.4vh;
 }
 
 .cart button:hover {
@@ -70,4 +76,10 @@
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+@media (orientation: portrait) {
+  .cart {
+    width: 70%;
+  }
 }
