--- a/src/components/TaskItem.module.css
+++ b/src/components/TaskItem.module.css
@@ -1,11 +1,11 @@
 .item {
   display: flex;
   justify-content: space-between;
-  width: 95%;
+  width: 100%;
   height: 7vh;
   background-color: white;
   border-bottom: 1px solid rgb(74, 62, 62);
-  margin: 0 1vw;
+  /* margin: 0 1vw; */
 }
 
 .item h1 {
@@ -28,8 +28,8 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  max-width: 85%;
   overflow: hidden;
+  margin-left: 1vh;
 }
 
 .right {
@@ -44,12 +44,9 @@
   cursor: pointer;
   border-radius: 1vh;
   font-size: 1.6vh;
+  margin-right: 1vh;
 }
 
 .right button:hover {
   border: 1px solid rgb(74, 62, 62);
-}
-
-.right button:last-child {
-  margin-left: 0.6vw;
 }
